<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"

    android:gravity="center">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/service_name"
        android:textColorHint="@color/white">

        <AutoCompleteTextView
            android:id="@+id/edt_formNewService_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:maxLines="1"
            android:textColor="@color/background_light"/>

    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:hint="@string/service_price"
            android:textColorHint="@color/white">

            <AutoCompleteTextView
                android:id="@+id/edt_formNewService_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal"
                android:maxLines="1"
                android:textColor="@color/background_light" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:hint="@string/date"
            android:textColorHint="@color/white">
            <AutoCompleteTextView
                android:id="@+id/edt_formNewService_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:maxLength="10"
                android:textColor="@color/background_light"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place_optional"
        android:textColorHint="@color/white">

        <AutoCompleteTextView
            android:id="@+id/edt_formNewService_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/background_light"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/actual_odometer"
        android:textColorHint="@color/white">

        <AutoCompleteTextView
            android:id="@+id/edt_formNewService_actualOdometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/background_light"/>

    </android.support.design.widget.TextInputLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit"
        android:id="@+id/button_formNewService_submit"/>




</LinearLayout>

