...
        android:background="@color/colorPrimary"
        android:id="@+id/TVTotalServices"
        android:paddingBottom="@dimen/activity_horizontal_margin"/>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_newVehicleService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TVTotalServices"
        android:layout_alignParentEnd="true"
        android:tint="@android:color/background_light"
        android:layout_margin="@dimen/activity_horizontal_margin"
...
